--- a/rs-react-app/package.json
+++ b/rs-react-app/package.json
@@ -7,7 +7,19 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "format:check": "prettier --check .",
+    "format:write": "prettier --write .",
+    "preview": "vite preview",
+    "prepare": "husky",
+    "lint-staged": {
+      "*.{js,jsx,ts,tsx}": [
+        "eslint --fix",
+        "prettier --write"
+      ],
+      "*.{json,md,yml,css,scss}": [
+        "prettier --write"
+      ]
+    }
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -26,6 +38,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "prettier": "3.6.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
