--- a/rs-react-app/package.json
+++ b/rs-react-app/package.json
@@ -6,18 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "format:check": "prettier --check .",
-    "format:write": "prettier --write .",
+    "lint": "eslint . --fix",
     "preview": "vite preview",
+    "format": "prettier --write .",
     "prepare": "husky && chmod ug+x .husky/*"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
+    "*.{ts,tsx}": [
       "eslint --fix",
       "prettier --write"
     ],
-    "*.{json,md,yml,css,scss}": [
+    "*.{json,md,css,scss,html}": [
       "prettier --write"
     ]
   },
@@ -40,7 +39,7 @@
     "globals": "^16.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
-    "prettier": "3.6.2",
+    "prettier": "^3.6.2",
     "sass-embedded": "^1.89.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
