--- a/rs-react-app/package.json
+++ b/rs-react-app/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://artmigalev.github.io/swapi/rs-react-app/",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
