--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install and build
+        working-directory: ./rs-react-app
         run: |
           npm install
           npm  run build
